--- a/index.html
+++ b/index.html
@@ -879,15 +879,15 @@
           <div class="content">
             <div class="place">
               <span class="fas fa-map-marker-alt"></span>
-              <span class="text">Indonesia, Earth</span>
+              <span class="text">Jaikranti College, Katraj, Pune</span>
             </div>
             <div class="phone">
               <span class="fas fa-phone-alt"></span>
-              <span class="text">+6282-1234-5679</span>
+              <span class="text">+91-9975822798</span>
             </div>
             <div class="email">
               <span class="fas fa-envelope"></span>
-              <span class="text">BookpolisTes@gmail.com</span>
+              <span class="text">nitesh.r.sharma999@gmail.com</span>
             </div>
           </div>
         </div>
@@ -915,7 +915,7 @@
             >Copyright <span class="far fa-copyright"></span
               > 2022
           </span>
-          <span> <a href="https://github.com/Muhthoriqas">Thoriq AS</a> | All rights reserved.</span>
+          <span> <a href="https://github.com/spherevoid0">Kaladhara</a> | All rights reserved.</span>
       </div>
     </footer>
     <!-- Footer End  -->
