--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <!-- Header 1 Start  -->
       <div class="header-1">
-        <a href="#" class="logo"><i class="fas fa-book"></i> Bookpolis</a>
+        <a href="#" class="logo"><img style="height: 3em;" src="./img/logo.png" alt="logo"></a>
         <form action="" class="search-form">
           <input
             type="search"
