--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -199,7 +199,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -215,7 +215,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -231,7 +231,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -247,7 +247,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -263,7 +263,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -279,7 +279,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -295,7 +295,7 @@
             </div>
             <div class="content">
               <h3>Book Title</h3>
-              <div class="price">Rp. 125.000 <span>Rp. 150.000</span></div>
+              <div class="price">Rs. 125.000 <span>Rs. 150.000</span></div>
               <a href="#populer" class="btn">Add To Cart</a>
             </div>
           </div>
@@ -362,7 +362,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -379,7 +379,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -396,7 +396,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -413,7 +413,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -430,7 +430,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -453,7 +453,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -470,7 +470,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -487,7 +487,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -504,7 +504,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -521,7 +521,7 @@
             </div>
             <div class="content">
               <h3>New Books</h3>
-              <div class="price">Rp 75.000 <span>Rp. 90.000</span></div>
+              <div class="price">Rs 75.000 <span>Rs. 90.000</span></div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
